<resources>
    <string name="app_name">Connect</string>
    <string name="username">USERNAME</string>
    <string name="register">REGISTER</string>
    <string name="store_login">com.zicure.login</string>
    <string name="priKey">private_key</string>
    <string name="pubKey">public_key</string>
    <string name="pubServ_key">pubServ_key</string>
    <string name="action_setings">Setting</string>

    <!--Slide menu-->
    <string name="menu_calendar">Calendar</string>
    <string name="menu_subject">E-learning</string>
    <string name="menu_news">News</string>

    //url login demo
    <string name="url_calendar">http://bloc.pakgon.com/Events/calendar</string>
    <string name="url_news">http://bloc.pakgon.com/news/feednews</string>
    <string name="url_subject">http://bloc.pakgon.com/News/subject</string>

    //Form Header Account
    <string name="connect_account">Connect Account</string>

    //Content Header
    <string name="header_login">Enter your number to access you drive history, favorites, and, points.</string>
    <string name="header_register">Ent</string>
    <string name="ePayment">E-payment</string>
    <string name="key_iv">ByteIV</string>
    <string name="content_alert_idcard">กรุณาใส่เลขบัตรประชาชนให้ครบ 13 หลัก</string>
    <string name="content_alert_phone">กรุณากรอกเบอร์โทรศัพท์ให้ครบ 10 หลัก</string>
    <string name="tag_home_fragment">tagHomeFragment</string>
    <string name="content_alert_OTP">กรุณากรอก OTP ให้ครบ 4 หลัก</string>
    <string name="token_login">token</string>
    <string name="dynamic_key">dynamic_key</string>
    <string name="phone_key">phone_key</string>
    <string name="user_secret">user_secret</string>
    <string name="message_get_userinfo_th">MOF PAY APPLICATION : จะขอรับข้อมูลส่วนตัวจาก CONNECT APPLICATION.</string>
    <string name="blog_social_th">Pakgon Social</string>
    <string name="confirm_password">ยืนยันรหัสผ่าน</string>
    <string name="message_check_password_th">รหัสผ่านไม่ถูกต้อง</string>

    //Slide menu
    <string name="menu_feed_th">ฟีด</string>
    <string name="setting_menu_th">การตั้งค่า</string>
    <string name="logout_menu_th">ออกจากระบบ</string>
    <string name="user_detail_th">ข้อมูลส่วนตัว</string>
    <string name="payment_th">ระบบจ่ายเงิน</string>
    <string name="title_id_card_th">เลขบัตรประจำตัวประชาชน</string>
    <string name="email_th">อีเมล์</string>


    //Login thai
    <string name="text_link_th">สมัครสมาชิก</string>
    <string name="text_ask_th">ไม่มีบัญชี?</string>
    <string name="text_btn_login_th">เข้าสู่ระบบ</string>
    <string name="text_forgot_password_th">ลืมรหัสผ่าน?</string>
    <string name="text_id_card_th">หมายเลขบัตรประชาชน</string>
    <string name="text_password_th">รหัสผ่าน</string>

    //Register Thai
    <string name="text_title_register">ลงทะเบียน</string>
    <string name="text_username_th">ชื่อผู้ใช้งาน</string>
    <string name="text_student_id_th">เลขประจำตัว</string>
    <string name="birth_date_th">วันเกิด</string>
    <string name="phone_number_th">หมายเลขโทรศัพท์</string>
    <string name="text_btn_confirm_th">ยืนยัน</string>
    <string name="txt_spinner_org_th">เลือกมหาลัย</string>
    <string name="txt_spinner_type_user_th">เลือกประเภทผู้ใช้</string>
    <string name="txt_first_name_th">ชื่อ</string>
    <string name="txt_last_name_th">นามสกุล</string>

    <string name="dialog_title_th">ต้องการลงทะเบียนใหม่อีกครั้ง?</string>
    <string name="dialog_title_pin_th">ต้องการยืนยันตัวตน?</string>
    <string name="dialog_message_fail_th">คุณกรอกข้อมูลไม่ถูกต้อง จึงต้องลงทะเบียนใหม่อีกครั้ง</string>
    <string name="dialog_message_pin_th">การยืนยันตัวตน ต้องใส่ PIN CODE เพื่อยืนยันตัวตนของคุณ </string>
    <string name="dialog_button_positive_th">ลงทะเบียน</string>
    <string name="dialog_button_negative_th">ยกเลิก</string>
    <string name="dialog_pin_button_positive_th">ยืนยันตัวตน</string>

    //Register English
    <string name="identity_card">Identification Card</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>

    //Forgot Password
    <string name="title_update_password_th">แก้ไขรหัสผ่าน</string>
    <string name="title_dialog_update_password_th">ต้องการแก้ไขรหัสผ่าน?</string>
    <string name="dialog_update_button_positive">แก้ไข</string>
    <string name="title_forgot_password_th">ตรวจสอบข้อมูล</string>

    //ID Card thai
    <string name="title_activity_id_card_th">บัตรประจำตัว</string>

    //Contact list
    <string name="topic_contact_list">เพื่อน</string>
    <string name="mark_version">Connect. @ 2017 version 1.0.1</string>

    //Normal
    <string name="confirm_th">ยอมรับ</string>
    <string name="cancel_th">ยกเลิก</string>
    <string name="condition_th">Terms of Use</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    //Start
    <string name="tab_home">Home</string>
    <string name="tab_alert">Alert</string>
    <string name="tab_contact">Contact</string>
    <string name="tab_profile">Profile</string>

</resources>
