<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_extra_large"
        android:paddingEnd="@dimen/padding_extra_large"
        android:background="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.company.zicure.campusconnect.customView.LabelView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/txt_spinner_type_user_th"
                android:textSize="@dimen/size_text_small"/>
            <Spinner
                android:id="@+id/spinner_user_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_university"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.company.zicure.campusconnect.customView.LabelView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/txt_spinner_org_th"
                android:textSize="@dimen/size_text_small"/>

            <Spinner
                android:id="@+id/spinner_org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_screenName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_five">

                <com.company.zicure.campusconnect.customView.EditTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/citizen_id"
                    android:inputType="number"
                    android:maxLines="1"
                    android:maxLength="13"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/padding_medium"
                    android:hint="@string/text_id_card_th" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_five">

                <com.company.zicure.campusconnect.customView.EditTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/padding_medium"
                    android:hint="@string/txt_first_name_th" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_top_five"
                >

                <com.company.zicure.campusconnect.customView.EditTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:padding="@dimen/padding_medium"
                    android:hint="@string/txt_last_name_th" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txt_layout_id_person"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_five">

            <com.company.zicure.campusconnect.customView.EditTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/student_id"
                android:inputType="number"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:padding="@dimen/padding_medium"
                android:hint="@string/text_student_id_th" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_five">

            <com.company.zicure.campusconnect.customView.EditTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/identity_card"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:padding="@dimen/padding_medium"
                android:hint="@string/text_username_th" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_five">

            <com.company.zicure.campusconnect.customView.EditTextView
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/birth_date_th"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="@dimen/padding_medium" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_five">

            <com.company.zicure.campusconnect.customView.EditTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/phone_number"
                android:inputType="number"
                android:maxLines="1"
                android:padding="@dimen/padding_medium"
                android:imeOptions="actionNext"
                android:maxLength="10"
                android:hint="@string/phone_number_th" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_five">

            <com.company.zicure.campusconnect.customView.EditTextView
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_th"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="@dimen/padding_medium" />

        </android.support.design.widget.TextInputLayout>

        <com.company.zicure.campusconnect.customView.TextInputView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_five">

            <com.company.zicure.campusconnect.customView.EditTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/padding_medium"
                android:imeOptions="actionNext"
                android:hint="@string/text_password_th" />

        </com.company.zicure.campusconnect.customView.TextInputView>

        <com.company.zicure.campusconnect.customView.TextInputView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_top_five">

            <com.company.zicure.campusconnect.customView.EditTextView
                android:id="@+id/edit_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/padding_medium" />

        </com.company.zicure.campusconnect.customView.TextInputView>


        <CheckBox
            android:id="@+id/check_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/alert_icon"
            android:drawablePadding="@dimen/padding_small"
            android:fontFamily="supermarket"
            android:paddingEnd="@dimen/padding_medium"
            android:text="ยอมรับข้อตกลง"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/size_text_small" />

        <com.company.zicure.campusconnect.customView.ButtonView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:textSize="@dimen/size_text_small"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/padding_large"
            android:layout_marginStart="@dimen/padding_large"
            android:layout_marginTop="@dimen/padding_large"
            android:text="@string/text_btn_confirm_th"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_btn_register" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
