<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/padding_extra_large"
    android:paddingEnd="@dimen/padding_extra_large">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_edit_update1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top_five">

        <com.company.zicure.campusconnect.customView.EditTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/username_update"
            android:inputType="text"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:padding="@dimen/padding_medium"
            android:hint="@string/text_username_th" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_edit_update2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_top_five">

        <com.company.zicure.campusconnect.customView.EditTextView
            android:id="@+id/email_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_th"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/padding_medium" />

    </android.support.design.widget.TextInputLayout>

    <com.company.zicure.campusconnect.customView.ButtonView
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:textSize="@dimen/size_text_small"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/padding_large"
        android:layout_marginStart="@dimen/padding_large"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/text_btn_confirm_th"
        android:textColor="@android:color/white"
        android:background="@drawable/selector_btn_register" />

</LinearLayout>